cmake_minimum_required(VERSION 3.17)
set(PROJECT_NAME arcade)
project(${PROJECT_NAME})
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror")
set(CMAKE_CXX_FLAGS_DEBUG_INIT "${CMAKE_CXX_FLAGS_DEBUG_INIT} -g")
set(SRC_FILES src/main.cpp)
include_directories(src/)
add_executable(${PROJECT_NAME} ${SRC_FILES})
