cmake_minimum_required(VERSION 3.17)
project(arcade)
set(CMAKE_CXX_STANDARD 20)
add_compile_options(-Wall -Wextra)
add_executable(arcade src/main.cpp)
#set
add_subdirectory(lib/Display/Ncurses)
add_subdirectory(lib/Display/SDL)
add_subdirectory(lib/Display/SFML)
add_subdirectory(lib/Game/Pacman)
add_subdirectory(lib/Game/Nibbler)
add_dependencies(arcade pacman nibbler Ncurses SDL SFML)
set_property(DIRECTORY APPEND PROPERTY ADDITIONAL_MAKE_CLEAN_FILES ${PROJECT_SOURCE_DIR}/arcade)
add_custom_command(TARGET arcade POST_BUILD COMMAND cp arcade ${PROJECT_SOURCE_DIR})