cmake_minimum_required(VERSION 3.17)
set(CMAKE_CXX_STANDARD 20)
set(BUILD_SHARED_LIBS ON)
add_library(pacman SHARED src/Pacman.cpp)
add_compile_options(-Wall -Wextra)
set_target_properties(pacman PROPERTIES PREFIX "arcade_")
set_property(DIRECTORY APPEND PROPERTY ADDITIONAL_MAKE_CLEAN_FILES ${PROJECT_SOURCE_DIR}/lib/arcade_pacman.so)
add_custom_command(TARGET pacman POST_BUILD COMMAND cp arcade_pacman.so ${PROJECT_SOURCE_DIR}/lib)